[gd_scene load_steps=15 format=3 uid="uid://dh0oj81pufivs"]

[ext_resource type="Script" uid="uid://4osxenmr6ido" path="res://src/main/main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cqs8c3rq6cxvk" path="res://addons/sgxr/function_pointer.tscn" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://btrugoluitgin" path="res://addons/sgxr/ui_layer.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://ciab6rk7831n" path="res://src/ui/ui.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://domuosuhftjxr" path="res://addons/sgxr/hand_tracking_message.tscn" id="5_30cu5"]
[ext_resource type="PackedScene" uid="uid://bw0ng04vcgduu" path="res://src/hands/hand_tracking_model.tscn" id="5_erw1m"]
[ext_resource type="PackedScene" uid="uid://gyggpun5wh6o" path="res://src/main/playback.tscn" id="5_jqarl"]
[ext_resource type="PackedScene" uid="uid://br72i82f12kke" path="res://addons/sgxr/start_xr.tscn" id="5_lquwl"]
[ext_resource type="Material" uid="uid://dsm58bhf7rek3" path="res://src/hands/hand_material.tres" id="6_w0wra"]
[ext_resource type="PackedScene" uid="uid://c7h60akhmrqj3" path="res://src/hands/left_hand_model.tscn" id="7_ibsor"]
[ext_resource type="PackedScene" uid="uid://cmjvm03ka5b0w" path="res://src/hands/right_hand_model.tscn" id="8_hc2u7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_30cu5"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_frqgp"]
material = SubResource("StandardMaterial3D_30cu5")
top_radius = 0.1
bottom_radius = 0.1
height = 0.01

[sub_resource type="Environment" id="Environment_0xm2m"]
tonemap_mode = 2

[node name="Main" type="Node3D"]
script = ExtResource("1_ig7tw")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="OriginCylinder" type="MeshInstance3D" parent="XROrigin3D"]
mesh = SubResource("CylinderMesh_frqgp")

[node name="UILayer" parent="XROrigin3D" node_paths=PackedStringArray("layer_viewport") instance=ExtResource("3_h2yge")]
process_mode = 3
transform = Transform3D(0.84894, 0, 0.528488, 0, 1, 0, -0.528488, 0, 0.84894, -1.79071, 1.25, -1.5)
quad_size = Vector2(1.7777, 1)
layer_viewport = NodePath("SubViewport")

[node name="SubViewport" type="SubViewport" parent="XROrigin3D/UILayer"]
disable_3d = true
gui_embed_subwindows = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="UI" parent="XROrigin3D/UILayer/SubViewport" instance=ExtResource("3_lquwl")]

[node name="LeftController" type="XRController3D" parent="XROrigin3D" groups=["hand"]]
tracker = &"left_hand"
pose = &"aim"

[node name="FunctionPointer" parent="XROrigin3D/LeftController" instance=ExtResource("3_1bvp3")]
select_action = "select"

[node name="RightController" type="XRController3D" parent="XROrigin3D" groups=["hand"]]
tracker = &"right_hand"
pose = &"aim"

[node name="FunctionPointer" parent="XROrigin3D/RightController" instance=ExtResource("3_1bvp3")]
select_action = "select"

[node name="LeftHand" type="XRNode3D" parent="XROrigin3D" groups=["hand"]]
unique_name_in_owner = true
tracker = &"/user/hand_tracker/left"
show_when_tracked = true

[node name="HandTrackingModel" parent="XROrigin3D/LeftHand" instance=ExtResource("5_erw1m")]
hand_material = ExtResource("6_w0wra")
fallback_hand_model = ExtResource("7_ibsor")
fallback_bone_update = 0

[node name="RightHand" type="XRNode3D" parent="XROrigin3D" groups=["hand"]]
unique_name_in_owner = true
tracker = &"/user/hand_tracker/right"
show_when_tracked = true

[node name="HandTrackingModel" parent="XROrigin3D/RightHand" instance=ExtResource("5_erw1m")]
hand_type = 1
hand_tracker = "/user/hand_tracker/right"
hand_material = ExtResource("6_w0wra")
fallback_hand_model = ExtResource("8_hc2u7")
fallback_bone_update = 0

[node name="HandTrackingMessage" parent="." instance=ExtResource("5_30cu5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86999, -1.52301)
visible = false
outline_size = 3

[node name="FrontLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.45519e-11, 1, -5)
text = "Front"
uppercase = true

[node name="Playback" parent="." instance=ExtResource("5_jqarl")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1.89646)

[node name="StartXR" parent="." instance=ExtResource("5_lquwl")]
webxr_optional_features = "hand-tracking"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[connection signal="screen_hidden" from="XROrigin3D/UILayer/SubViewport/UI" to="." method="_on_ui_screen_hidden"]
[connection signal="screen_shown" from="XROrigin3D/UILayer/SubViewport/UI" to="." method="_on_ui_screen_shown"]
[connection signal="focus_gained" from="StartXR" to="." method="_on_start_xr_focus_gained"]
[connection signal="focus_lost" from="StartXR" to="." method="_on_start_xr_focus_lost"]
